Fix readability enhancement on lists
Reduce specificity of maximum width restriction on lists so that utility classes can be effectively applied to change the default behavior.

--- a/CSS/ta-custom_daesa.less
+++ b/CSS/ta-custom_daesa.less
@@ -58,8 +58,8 @@
 // TODO: Add inline documentation section for readability enhancements.
 
 p,
-.column ol,
-.column ul {
+ol,
+ul {
 	max-width: 80ch;
 }
 
